parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail04.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail04.json
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            Null,
            LBrace,
            LBracket,
            True,
            False,
        ],
        actual: RBracket,
        invalid_row: 1,
        invalid_col: 16,
    },
)
